# on9log_host

./: .gitlab-ci.yml  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
on9log-capture/: Cargo.toml
on9log-capture/src/: db.rs  main.rs  term.rs
on9log-cli/: Cargo.toml  build.rs
on9log-cli/src/: main.rs  term.rs  web.rs
on9log-cli/web/: .prettierignore  README.md  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
on9log-cli/web/src/: App.tsx  LogTerminal.tsx  api.ts  main.tsx  styles.css  theme.ts
on9log-protocol/: Cargo.toml
on9log-protocol/src/: cppfmt.rs  crash.rs  crc.rs  decode.rs  elf_resolv.rs  framer.rs  lib.rs  printf.rs  wire.rs
